--- a/aspnet-core/src/Sys.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Sys.Web/Pages/Index.cshtml
@@ -33,7 +33,7 @@
         {
             <div class="container">
                 <div class="p-5 text-center">
-                    <h1>Welcome to EInvo!</h1>
+                    <h1>Welcome to E-Invoice Middleware!</h1>
                     <a abp-button="Primary" href="~/Account/Login"><i class="fa fa-sign-in"></i> @L["Login"]</a>
                 </div>
             </div>
