--- a/aspnet-core/src/Sys.Web/Pages/AuditLogs/Index.cshtml
+++ b/aspnet-core/src/Sys.Web/Pages/AuditLogs/Index.cshtml
@@ -13,8 +13,8 @@
 }
 @section scripts
 {
-    @* <abp-script src="/Pages/LoggingManagement/SystemLogs/index.js" /> *@
     <abp-script src="/view-resources/views/auditlogs/index.js"/>
+    <abp-script src="/view-resources/Views/AuditLogs/_DetailModals.js" />
 }
 @section styles
 {
@@ -22,23 +22,7 @@
 }
 
 <script>
-    var queryString = "@Model.QueryModel.QueryString";
-    var userName = "@Model.QueryModel.UserName";
-    var startTime = "@Model.QueryModel.StartTime.ToString("yyyy-MM-dd HH:mm:ss")";
-    var endTime = "@Model.QueryModel.EndTime.ToString("yyyy-MM-dd HH:mm:ss")";
-    var hasException = "@Model.QueryModel.hasException";
-    var applicationName = "@Model.QueryModel.ApplicationName";
-    // var serviceName = "@Model.QueryModel.ServiceName";
 
-    // //detail
-    // var Browser = "@Model.QueryModel.Browser";
-
-
-    var currentDetailModalData = {
-        logName: null,
-        logValue: null,
-        time: null
-    };
 </script>
 
 <abp-card>
