--- a/aspnet-core/src/Sys.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Sys.Web/Pages/Index.cshtml
@@ -32,7 +32,8 @@
         @if (!CurrentUser.IsAuthenticated)
         {
             <div class="container">
-                <div class="p-5 text-center">
+        <div class="p-5 text-center">
+            <img src="~/images/logo/logo.png" />
                     <h1>Welcome to E-Invoice Middleware!</h1>
                     <a abp-button="Primary" href="~/Account/Login"><i class="fa fa-sign-in"></i> @L["Login"]</a>
                 </div>
