--- a/modules/EInvoice/src/EInvoice.Web/Pages/EInvoice/InvoiceJournals/Index.cshtml
+++ b/modules/EInvoice/src/EInvoice.Web/Pages/EInvoice/InvoiceJournals/Index.cshtml
@@ -7,6 +7,10 @@
 @using EInvoice.Web.Pages.EInvoice.EInvoice.InvoiceJournals
 @using EInvoice.Localization
 @using EInvoice.Web.Menus
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI
+@addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bootstrap
+@addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bundling
 @model IndexModel
 @inject IPageLayout PageLayout
 @inject IHtmlLocalizer<EInvoiceResource> L
