bug fix & Dashboard

--- a/modules/TaskScheduler/src/TaskScheduler.Web/Pages/TaskScheduler/Index.cshtml
+++ b/modules/TaskScheduler/src/TaskScheduler.Web/Pages/TaskScheduler/Index.cshtml
@@ -6,7 +6,7 @@
 @using TaskScheduler.Localization;
 @using TaskScheduler.Web.Menus;
 @using Volo.Abp.Users
-@* @model Sys.Web.Pages.tas.IndexModel *@
+@* @model iSync.Web.Pages.tas.IndexModel *@
 @inject IPageLayout PageLayout
 @inject IHtmlLocalizer<TaskSchedulerResource> L
 @inject IAuthorizationService Authorization
